# DocQA

./: .gitignore  README.md
backend/: README.md  app.py  pyproject.toml  requirements.txt
backend/models/: models.py
backend/parser/: pdf_parser.py  vector_store.py
frontend/src/: App.css  index.css
frontend/src/components/: Chat.css  Chat.jsx
